2009-07-01  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-init-2): Move to ...
	(gdb-starting): ... here because GDB 7.0 requires execution to have
	started when using MI command -data-list-register-names.
	(gdb-propertize-header): New macro.
	(gdb-breakpoints-header, gdb-locals-header): Use it.

2009-07-01  Kenichi Handa  <handa@m17n.org>

	* international/encoded-kb.el (encoded-kbd-setup-display): Fix
	typo (encoded-kbd-saved-input-mode ->
	encoded-kbd-saved-input-meta-mode).

2009-06-30  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-directly): Handle
	also the 'rename case, when setting file modes.  (Bug#3712)
	(tramp-default-file-modes) Remove execute permissions.

2009-06-29  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-mask-paragraph): Remove a spurious
	correction between the visible width of TABs and their number of
	bytes.

2009-06-29  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-directly): Set file
	modes mandatory.  (Bug#3712)

2009-06-28  Glenn Morris  <rgm@gnu.org>

	* autorevert.el (global-auto-revert-non-file-buffers)
	(global-auto-revert-mode): Doc fixes.

2009-06-24  Glenn Morris  <rgm@gnu.org>

	* comint.el (comint-insert-input): Doc fix.

	* pcmpl-rpm.el (pcomplete/rpm): Doc fix.

	* textmodes/ispell.el (ispell-local-dictionary): Doc fix.

2009-06-21  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/lisp-mode.el (lisp-indent-function)
	* emacs-lisp/cl-indent.el (lisp-indent-defun-method)
	(common-lisp-indent-function): Add doc strings.

2009-06-19  David Casperson  <casper@unbc.ca>  (tiny change)

	* font-core.el (turn-on-font-lock-if-desired): Correctly handle
	the case where font-lock-global-modes is a list that doesn't begin
	with `not' (Bug#3611).

2009-06-19  Glenn Morris  <rgm@gnu.org>

	* subr.el (open-network-stream): Doc fix.

2009-06-19  Juanma Barranquero  <lekktu@gmail.com>
